<resources>
    <string name="app_name">Nell Food App</string>
    <string name="category_name">Nama Kategori</string>
    <string name="menu_name">Nama Menu</string>
    <string name="menu_price">Harga Menu</string>
    <string name="menu_rate">4.9</string>
    <string name="menu_list">Menu Makanan</string>
    <string name="hello_tag">Hai Nellam, </string>
    <string name="tagline">Mau makan apa hari ini?</string>
    <string name="icon_profile">Icon Profile</string>
    <string name="icon_shopping_cart">Icon Shopping Cart</string>

</resources>