<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewHeader1"
                android:layout_width="230dp"
                android:layout_height="22dp"
                android:text="@string/hello_tag"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:textStyle="bold" />

            <TextView
                android:id="@+id/textViewHeader2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/tagline"
                android:textColor="@color/grey"
                android:fontFamily="sans-serif"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/textViewHeader1"
                app:layout_constraintTop_toTopOf="@id/textViewHeader1" />

            <ImageView
                android:id="@+id/imageViewChart"
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/baseline_shopping_cart_24"
                android:contentDescription="@string/icon_shopping_cart"
                app:layout_constraintStart_toEndOf="@+id/textViewHeader1"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/icon_profile"
                app:layout_constraintStart_toEndOf="@+id/imageViewChart"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/searchback"
        android:queryHint="Search Menu"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewHeader"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="wrap" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/searchView"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menuItemImageBanner"
                android:layout_width="365dp"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bannerfoodv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewBanner" />

    <TextView
        android:id="@+id/listMenuName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:padding="4dp"
        android:text="@string/menu_list"
        android:textColor="@color/app_color_primary"
        android:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewCategory"
        tools:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listMenuName" />

</androidx.constraintlayout.widget.ConstraintLayout>
